--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -53,6 +53,7 @@
 <%= render 'inactivate_dialog' if edit_mode == :edit %>
 <%= render 'add_address_dialog' %>
 
+<%= render 'shared/hide_invisible_form_fields_js', model_name: "customer", table_name: 'customers', provider_id:  current_provider.try(:id) %>
 
 <script>
 // hide middle/last names for group customer
