--- a/app/views/customers/_providers_panel.html.haml
+++ b/app/views/customers/_providers_panel.html.haml
@@ -6,3 +6,9 @@
       = translate_helper(:customer_providers_panel)
   .panel-body
     = f.association :authorized_providers, as: :check_boxes, label: false, :item_wrapper_class => 'col-md-12', :label_html => { :class => 'col-md-12', :wrapper => false }
+
+:javascript
+  $(document).ready(function() {
+    $("#customer_authorized_provider_ids_#{@customer.provider.try(:id)}").prop('checked', 'checked').prop('disabled', 'disabled');
+  });
+  
